--- a/PizzaOffer/Areas/Web/Views/Shared/_Layout.cshtml
+++ b/PizzaOffer/Areas/Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - NewBridge.WebApp</title>
+    <title>@ViewData["Title"] - PizzaOffer</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="Web" asp-controller="Home" asp-action="Index" class="navbar-brand">NewBridge.WebApp</a>
+                <a asp-area="Web" asp-controller="Home" asp-action="Index" class="navbar-brand">PizzaOffer</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -45,7 +45,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - NewBridge.WebApp</p>
+            <p>&copy; 2019 - PizzaOffer</p>
         </footer>
     </div>
 
