--- a/PizzaOffer/Areas/Web/Views/_ViewImports.cshtml
+++ b/PizzaOffer/Areas/Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
-﻿@*@using PizzaOffer.Areas.Web.Models
-@using PizzaOffer.Areas.Web.Models.AccountViewModels*@
+﻿@using PizzaOffer
+@using PizzaOffer.Areas.Web
+@*@using PizzaOffer.Areas.Web.Models
+    @using PizzaOffer.Areas.Web.Models.AccountViewModels*@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
