Fixed HomeController and AdminController and their views

--- a/PizzaOffer/Areas/Web/Views/_ViewImports.cshtml
+++ b/PizzaOffer/Areas/Web/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using PizzaOffer
 @using PizzaOffer.Areas.Web
-@*@using PizzaOffer.Areas.Web.Models
-    @using PizzaOffer.Areas.Web.Models.AccountViewModels*@
+@using PizzaOffer.Areas.Web.Models;
+@using PizzaOffer.Areas.Web.Models.Admin;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
