Fixed AccountController and Added Login and Register actions

--- a/PizzaOffer/Areas/Web/Views/Shared/_LoginPartial.cshtml
+++ b/PizzaOffer/Areas/Web/Views/Shared/_LoginPartial.cshtml
@@ -3,7 +3,7 @@
     @inject SignInManager<IdentityUser> SignInManager
     @inject UserManager<IdentityUser> UserManager*@
 
-@*@using PizzaOffer.Services
+@using PizzaOffer.Services
 @inject IUsersService UsersService
 @inject IRolesService RolesService
 
@@ -14,10 +14,10 @@
             <li>
                 <a asp-area="Web" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UsersService.GetCurrentUserUsername() !</a>
             </li>
-            @if (await RolesService.IsUserInRole(UsersService.GetCurrentUserId(), @CustomRoles.Admin))
+            @if (await RolesService.IsUserInRoleAsync(UsersService.GetCurrentUserId(), @CustomRoles.Admin))
             {
                 <li>
-                    <a asp-area="Web" asp-controller="Home" asp-action="Index" title="Admin">Admin</a>
+                    <a asp-area="Web" asp-controller="Admin" asp-action="Index" title="Admin">Admin</a>
                 </li>
             }
             <li>
@@ -32,4 +32,4 @@ else
         <li><a asp-area="Web" asp-controller="Account" asp-action="Register">Register</a></li>
         <li><a asp-area="Web" asp-controller="Account" asp-action="Login">Log in</a></li>
     </ul>
-}*@
+}
