--- a/PizzaOffer/Areas/Web/Views/Account/Login.cshtml
+++ b/PizzaOffer/Areas/Web/Views/Account/Login.cshtml
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col-md-4">
         <section>
-            <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
+            <form asp-area="Web" asp-controller="Account" asp-action="Login" asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
                 <h4>Use a local account to log in.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
