Added Admin Area

--- a/PizzaOffer/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/PizzaOffer/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -42,19 +42,19 @@
                     <li><a asp-area="Web" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="Web" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
-                <partial name="/Areas/Web/Views/Shared/_LoginPartial.cshtml" />
+                <partial name="/Views/Shared/_LoginPartial.cshtml" />
             </div>
         </div>
     </nav>
     <div class="sidebar sidebar-collapse collapse">
         <a class="active" href="#home">Home</a>
+        <a href="#Users">Users</a>
         <a href="#news">News</a>
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
-        <a href="#about">About</a>
 
     </div>
-    <partial name="/Areas/Web/Views/Shared/_CookieConsentPartial.cshtml" />
+    <partial name="/Views/Shared/_CookieConsentPartial.cshtml" />
 
     <div class="container-fluid body-content">
 
