--- a/PizzaOffer/Areas/Admin/Views/_ViewImports.cshtml
+++ b/PizzaOffer/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using PizzaOffer
-@using PizzaOffer.Areas.Web
-@using PizzaOffer.Areas.Web.Models;
+@using PizzaOffer.Areas.Admin
+@using PizzaOffer.Areas.Admin.Models;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
