Moved SidebarNavigation to a partial view. Added Admin/UsersController. Fixed routes.

--- a/PizzaOffer/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/PizzaOffer/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -46,14 +46,9 @@
             </div>
         </div>
     </nav>
-    <div class="sidebar sidebar-collapse collapse">
-        <a class="active" href="#home">Home</a>
-        <a href="#Users">Users</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-
-    </div>
+    
+    <partial name="/Areas/Admin/Views/Shared/_SidebarNavigation.cshtml" />
+    
     <partial name="/Views/Shared/_CookieConsentPartial.cshtml" />
 
     <div class="container-fluid body-content">
